# workshop_caadria_2026

./: PIPELINE.md  README.md  caadria_toolpath.json  main.py  pyproject.toml
docker/: docker-compose.yml
docker/config/: mosquitto.conf
examples/: 00_install.gh  00_install.ghx  01-design_autosave.ghx.gh  01-rf_design.3dm  01_brick_wall.gh  01_brick_wall.ghx  02_compas-timber.ghx  02_mesh.ghx  03_mesh_with_scene.ghx  04_parametric_mesh.ghx  05_compas-timber.ghx  lib_simple_timber_model.py
examples/01-rf_design/: 01-design-test-serialization.ghx  rf_model.json  timber_model_creator.py
grasshopper/: a00_compas-timber.ghx  a01-brick-wall.gh  akt_agent.gh  rf_model.btlx  robot.ghx  timber_toolpaths.py  update_headers.py
grasshopper/01-rf_design/: 01-design.ghx  meshers.py
grasshopper/pipeline/: 00-rf_design_akt.ghx  00_designer.ghx  01-fabrication_akt.gh  01_fabricator.ghx  02_operator.ghx  03_operator.ghx  gh_agent.py  modifiers.py  timber_model_creator.py  timber_toolpaths.py
milling_test/: laps_milling_test.gh  milling_test_beams.json
mqtt_bridge_agent/: __main__.py  bridge_agent.py  bridge_transport.py  mock_external.py
pipeline/: 00_designer.ghx  01_fabricator.ghx  03_operator.ghx  blueprint-dfab-pipeline.json  gh_agent.py  lib_extra_packing_stats.py  lib_extra_toolpath.py  lib_extra_toolpath_v2.py  lib_gh_agent.py  lib_mesh_relax.py  lib_modifiers.py  lib_multi_surface_setup.py  lib_rf_system.py  lib_timber_model.py  sample-timber-model.json
pipeline/blueprints/: caadria-dfab_1.1.json  caadria-dfab_1.10.json  caadria-dfab_1.2.json  (+2 more)
robot/: README.md
(+63 files in other folders)
