[project]
name = "workshop-caadria-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "compas-fab",
    "compas-timber==2.1.1-rc1",
    "antikythera-sdk==0.2.0",
    "timber_design==0.2.0"
]

[tool.ruff]
line-length = 179

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true

